kustomize/overlays/scots-lab/apps/stirling-pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  selector:
    app: stirling-pdf
  ports:
    - name: proxy
      port: 4180
      targetPort: 4180
