kustomize/overlays/scots-lab/apps/stirling-pdf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Stirling-PDF
    gethomepage.dev/group: Tools
    gethomepage.dev/description: PDF Toolkit
    gethomepage.dev/icon: stirling-pdf.png
    gethomepage.dev/href: https://pdf.srbii.com
    gethomepage.dev/weight: '42'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - pdf.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: stirling-pdf
      port: 4180
